// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/DatePicker/DatePicker Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rf:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:re:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:re:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rg:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rg:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r6:"
           class="LabelWithHelp_label__59tP-"
           for="htmlid"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="htmlid"
             class="DatePicker_input__vz7zh"
             data-testid="123ID"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithAutoCompleteNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r22:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r21:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r21:"
             class="DatePicker_input__vz7zh"
             autocomplete="given-name"
             name="test_name"
             placeholder="placeholdertekst"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r23:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r23:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r20:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:ra:"
           class="LabelWithHelp_label__59tP-   dummyClassname"
           for="datepickerInputId-:r9:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF dummyClassnameFormContainer">
      <input id="datepickerInputId-:r9:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             aria-describedby="datepickerErrorId-:r8:"
             aria-invalid="true"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDateFormat play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2d:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r2c:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r2c:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value="2024/02/05"
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2e:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2e:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:ru:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:ru:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value="01.02.2024"
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r10:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r10:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1j:"
    >
      Fødselsdato
    </label>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1j:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1l:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1l:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rn:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:rm:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:rm:"
             class="DatePicker_input__vz7zh"
             disabled
             placeholder="Skriv eller velg"
             value="01.02.2024"
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              disabled
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1a:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1a:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1c:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1c:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithErrorMessageAndHasError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1f:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1e:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1e:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             aria-describedby="datepickerErrorId-:r1d:"
             aria-invalid="true"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1g:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1g:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1d:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1o:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1n:"
    >
      Fødselsdato
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r1o:"
            aria-expanded="true"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1p:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1p:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_helpBox__nbhjO">
      <span class="Help_helpBoxText__j6sH7">
        Hjelpetekst
      </span>
      <button class="IconButton_button__mw9sG IconButton_button_small__etst4  Help_helpBoxCloseButton__RueX2"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1r:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1n:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1q:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1q:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1m:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r69:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r68:"
    >
      Fødselsdato
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r69:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r6a:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r6a:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r68:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r6b:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r6b:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r67:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1u:"
           class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
           for="datepickerInputId-:r1t:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1t:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1v:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1v:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1s:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithInitialPickerDate play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2q:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r2p:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r2p:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="true"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2r:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r2o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div class="DatePicker_calendarContainer__4MXih">
      <div class="DatePickerCalendar_calendar__MrP62 ">
        <div class="DatePickerCalendar_calendarNavigation__pG+UM">
          <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  DatePickerCalendar_calendarNavigationArrowIcon__fUDs1"
                  type="button"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r2s:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r2s:">
                Forrige måned Desember 2023
              </title>
              <path d="M22.3 10.8v1.8H5.5l5.2 5.1L9.3 19l-7.5-7.3 7.7-7.3 1.4 1.3-5.2 5.1h16.6Z">
              </path>
            </svg>
          </button>
          <div class="DatePickerCalendar_calendarNavigationMonthAndYearContainer__i-9ID">
            <div class>
              <label id="labelId-:r2v:"
                     class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
                     for="selectId-:r2u:"
              >
                Velg måned
              </label>
              <div class="Select_selectContainer__CfUZs DatePickerCalendar_calendarNavigationMonth__th-Oc">
                <select id="selectId-:r2u:"
                        class="Select_select__-ENv1"
                >
                  <option class
                          value="0"
                  >
                    Januar
                  </option>
                  <option class
                          value="1"
                  >
                    Februar
                  </option>
                  <option class
                          value="2"
                  >
                    Mars
                  </option>
                  <option class
                          value="3"
                  >
                    April
                  </option>
                  <option class
                          value="4"
                  >
                    Mai
                  </option>
                  <option class
                          value="5"
                  >
                    Juni
                  </option>
                  <option class
                          value="6"
                  >
                    Juli
                  </option>
                  <option class
                          value="7"
                  >
                    August
                  </option>
                  <option class
                          value="8"
                  >
                    September
                  </option>
                  <option class
                          value="9"
                  >
                    Oktober
                  </option>
                  <option class
                          value="10"
                  >
                    November
                  </option>
                  <option class
                          value="11"
                  >
                    Desember
                  </option>
                </select>
                <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz Select_selectIcon__ywv2N"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                  </path>
                </svg>
              </div>
              <div id="selectErrorId-:r2t:"
                   aria-live="assertive"
                   aria-atomic="true"
              >
              </div>
            </div>
            <div class="DatePickerCalendar_calendarNavigationYear__Icqmb">
              <label id="labelId-:r33:"
                     class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
                     for="textFieldTextboxId-:r32:"
              >
                Årstall
              </label>
              <input id="textFieldTextboxId-:r32:"
                     class="TextField_textbox__qbZlk"
                     inputmode="numeric"
                     value="2024"
              >
              <div id="textFieldErrorId-:r31:"
                   aria-live="assertive"
                   aria-atomic="true"
              >
              </div>
            </div>
          </div>
          <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  DatePickerCalendar_calendarNavigationArrowIcon__fUDs1"
                  type="button"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r34:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r34:">
                Neste måned Februar 2024
              </title>
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
          </button>
        </div>
        <table class="DatePickerCalendar_calendarTable__zDKjI">
          <caption class="DatePickerCalendar_srOnly__VfDJH">
            Januar 2024
          </caption>
          <thead>
            <tr>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Man
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Tir
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Ons
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Tor
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Fre
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Lør
              </th>
              <th class="DatePickerCalendar_calendarTableHeaderCell__ycSvV">
                Søn
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 1. Januar 2024"
                >
                  1
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 2. Januar 2024"
                >
                  2
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 3. Januar 2024"
                >
                  3
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 4. Januar 2024"
                >
                  4
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 5. Januar 2024"
                >
                  5
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 6. Januar 2024"
                >
                  6
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 7. Januar 2024"
                >
                  7
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 8. Januar 2024"
                >
                  8
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 9. Januar 2024"
                >
                  9
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 10. Januar 2024"
                >
                  10
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 11. Januar 2024"
                >
                  11
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 12. Januar 2024"
                >
                  12
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 13. Januar 2024"
                >
                  13
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 14. Januar 2024"
                >
                  14
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr  DatePickerCalendar_calendarTableDateButton_today__eAaxy"
                        type="button"
                        tabindex="-1"
                        aria-label="I dag 15. Januar 2024"
                >
                  15
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 16. Januar 2024"
                >
                  16
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 17. Januar 2024"
                >
                  17
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 18. Januar 2024"
                >
                  18
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 19. Januar 2024"
                >
                  19
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 20. Januar 2024"
                >
                  20
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 21. Januar 2024"
                >
                  21
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 22. Januar 2024"
                >
                  22
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 23. Januar 2024"
                >
                  23
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 24. Januar 2024"
                >
                  24
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 25. Januar 2024"
                >
                  25
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 26. Januar 2024"
                >
                  26
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 27. Januar 2024"
                >
                  27
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 28. Januar 2024"
                >
                  28
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 29. Januar 2024"
                >
                  29
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="-1"
                        aria-label=" 30. Januar 2024"
                >
                  30
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr"
                        type="button"
                        tabindex="0"
                        aria-current="true"
                        aria-label=" 31. Januar 2024"
                >
                  31
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr DatePickerCalendar_calendarTableDateButton_adjacentMonth__B0fnM"
                        type="button"
                        tabindex="-1"
                        aria-label=" 1. Februar 2024"
                >
                  1
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr DatePickerCalendar_calendarTableDateButton_adjacentMonth__B0fnM"
                        type="button"
                        tabindex="-1"
                        aria-label=" 2. Februar 2024"
                >
                  2
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr DatePickerCalendar_calendarTableDateButton_adjacentMonth__B0fnM"
                        type="button"
                        tabindex="-1"
                        aria-label=" 3. Februar 2024"
                >
                  3
                </button>
              </td>
              <td>
                <button class="DatePickerCalendar_calendarTableDateButton__puJOr DatePickerCalendar_calendarTableDateButton_adjacentMonth__B0fnM"
                        type="button"
                        tabindex="-1"
                        aria-label=" 4. Februar 2024"
                >
                  4
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithPlaceholderEmpty play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r26:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r25:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r25:"
             class="DatePicker_input__vz7zh"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r27:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r27:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r24:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r29:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r29:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             readonly
             value="01.02.2024"
      >
    </div>
    <div id="datepickerErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r1:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value
             name="dummyNameForwardedFromRef"
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r13:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r12:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r12:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             required
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r14:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r14:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r11:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r17:"
           class="LabelWithHelp_label__59tP- LabelWithHelp_label_required__KSuzW"
           for="datepickerInputId-:r16:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:r16:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             required
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r18:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r18:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r15:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rr:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:rq:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:rq:"
             class="DatePicker_input__vz7zh"
             placeholder="Skriv eller velg"
             value="01.02.2024"
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rs:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rs:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:ri:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_dateContainer__WILQF ">
      <input id="datepickerInputId-:ri:"
             class="DatePicker_input__vz7zh DatePicker_input_large__ynP5U"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="DatePicker_calendarButton__6sCKL DatePicker_calendarButton_large__3mcID"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
